Closed Bug 1714640 Opened 3 years ago Closed 3 years ago

Selection::ScrollIntoView incorrectly scroll to the previous line before a significant \n

Categories

(Core :: DOM: Selection, defect, P3)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox91 --- fixed

People

(Reporter: saschanaz, Assigned: saschanaz)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

Kagami: can you please set the priority and severity of this ticket? Helps removing it from the bug-triage radar.

Flags: needinfo?(krosylight)
Severity: -- → S3
Flags: needinfo?(krosylight)
Priority: -- → P3
Pushed by krosylight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f0f9b4349f37 Add AdjustFrameForLineStart call in Selection::ScrollIntoView r=emilio
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: