Bug 1714640 - Add AdjustFrameForLineStart call in Selection::ScrollIntoView r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D117009